<resources>
    <string name="app_name">BandMe</string>

    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="Dont_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="campo_vacio">El campo es obligatorio</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="campo_requerido">Required</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_member">Already a member?</string>
    <string name="welcome_one">Good Morning</string>
    <string name="buscar">Search</string>
    <string name="perfil">Profile</string>
    <string name="buscar_instrumentos">Instruments</string>
    <string name="premium">Premium</string>
    <string name="user_office_example">Guitarist</string>
    <string name="user_name_example">Nombre Apellido</string>
    <string name="user_geoloc_example">Ciudad de Buenos Aires</string>
    <string name="user_my_content">My Content</string>
    <string name="user_about_me">About me</string>
    <string name="user_friends_exmaple">Friends</string>
    <string name="user_about_data">Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised</string>
    <string name="user_edad">24 Años</string>
    <string name="my_perfil">My Profile</string>
    <string name="friends">Friends</string>
    <string name="search_friends">Search Users</string>
    <string name="search_instruments">Search Instruments</string>
    <string name="search">Search</string>
    <string name="instrument_example">Electric Guitar</string>
    <string name="instrument_price_example">$10000</string>
    <string name="alquiler_compra">Alquiler/Comprar</string>
    <string name="premium_maestro">Premium Maestro\n¡Premium!</string>
    <string name="acces_premium_description">Accediendo a la versión Premium vas a obtener los siguientes beneficios</string>
    <string name="sin_publicidad">Vas a navegar por la app super tranqui sin anuncios</string>
    <string name="mas_vistas">Vas a aparecer en una lista prioritaria de busquedas</string>
    <string name="lo_quiero">Si si, venga el Premium</string>


</resources>
