<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:background="@drawable/shape"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:id="@+id/linearLayout4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/materialTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="24dp"
                            android:layout_marginLeft="24dp"
                            android:layout_marginTop="16dp"
                            android:text="@string/welcome_one"
                            android:textColor="@color/color_on_secondary"
                            android:textSize="24dp"
                            android:textStyle="italic"
                            app:fontFamily="sans-serif" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/materialTextView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="24dp"
                            android:text="@string/username"
                            android:textColor="@color/color_on_secondary"
                            android:textSize="24dp"
                            android:textStyle="italic"
                            app:fontFamily="sans-serif"/>


                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_gravity="center"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:srcCompat="@drawable/ic_icon_bandme_foreground"
                                tools:ignore="VectorDrawableCompat" />

                            <com.google.android.material.textview.MaterialTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:layout_marginEnd="16dp"
                                android:layout_marginRight="16dp"
                                android:layout_marginBottom="16dp"
                                android:text="@string/app_name"
                                android:textColor="@color/color_on_secondary"
                                android:textSize="24sp"
                                app:fontFamily="sans-serif"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent" />

                        </androidx.constraintlayout.widget.ConstraintLayout>


                    </LinearLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0.5">

                <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="0.33">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cardSearchUsers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    app:cardBackgroundColor="@color/color_cardview"
                    app:rippleColor="@color/color_secondary"
                    app:cardCornerRadius="8dp"
                    android:elevation="4dp"
                    app:cardElevation="8dp">

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/buscar"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:textSize="22dp"
                        app:fontFamily="sans-serif"
                        android:textColor="@color/color_primary_variant"
                        />

                    <ImageView
                        android:id="@+id/imageViewSearchUsers"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="right|bottom"
                        android:src="@drawable/ic_icon_search_foreground" />
                </com.google.android.material.card.MaterialCardView>

                 </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="0.33">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cardUserProfile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:clickable="true"
                        android:elevation="4dp"
                        app:cardBackgroundColor="@color/color_cardview"
                        app:cardCornerRadius="8dp"
                        app:rippleColor="@color/color_secondary"
                        app:cardElevation="8dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/perfil"
                            android:textColor="@color/color_primary_variant"
                            android:textSize="22dp"
                            app:fontFamily="sans-serif" />

                        <ImageView
                            android:id="@+id/imageViewProfile"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="right|bottom"
                            android:src="@drawable/ic_icon_profile_foreground" />
                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0.5">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.33"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cardInstruments"
                        android:layout_width="178dp"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:clickable="true"
                        android:elevation="4dp"
                        app:cardBackgroundColor="@color/color_cardview"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="8dp"
                        app:rippleColor="@color/color_secondary">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="10dp"
                            android:text="@string/buscar_instrumentos"
                            android:textColor="@color/color_primary_variant"
                            android:textSize="22dp"
                            app:fontFamily="sans-serif" />

                        <ImageView
                            android:id="@+id/imageViewMusicInstruments"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="right|bottom"
                            android:src="@drawable/ic_icon_music_instruments_foreground" />
                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_weight="0.33">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/cardPremium"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        android:clickable="true"
                        app:rippleColor="@color/color_secondary"
                        app:cardBackgroundColor="@color/color_cardview"
                        app:cardCornerRadius="8dp"
                        android:elevation="4dp"
                        app:cardElevation="8dp">

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/premium"
                            android:layout_marginLeft="16dp"
                            android:layout_marginTop="10dp"
                            android:textSize="22dp"
                            app:fontFamily="sans-serif"
                            android:textColor="@color/color_primary_variant"
                            />

                        <ImageView
                            android:id="@+id/imageViewPremium"
                            android:layout_width="180dp"
                            android:layout_height="match_parent"
                            android:layout_gravity="right|bottom"
                            android:src="@drawable/ic_icon_premium_foreground" />
                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>